<resources>

    <string name="app_name">QueTalTuDia</string>
    <string name="action_setting">Settings</string>

    <!--Titulo -->
    <string name="pregunta"> ¿Qué tal fue tu día? </string>

    <!-- Respuestas -->
    <string name="respuesta1"> Excelente </string>
    <string name="respuesta2"> Bueno </string>
    <string name="respuesta3"> Malo </string>
    <string name="respuesta4"> Pésimo </string>

    <!-- Botón -->
    <string name="btn_txt"> Enviar </string>

    <!-- Mensaje -->
    <string name="mensaje1"> ¡Qué buena noticia! </string>
    <string name="mensaje2"> Seguro que mañana será excelente </string>
    <string name="mensaje3"> ¡Vamos! Que no decaiga </string>
    <string name="mensaje4"> ¡Arriba ese ánimo! </string>

</resources>